--- a/examples/pebr_stage1.yaml
+++ b/examples/pebr_stage1.yaml
@@ -25,6 +25,11 @@ algorithm:
   kl_penalty: low_var_kl
   kl_coef: 1.0e-2
 
+  online_filtering: false  # online dataset sample (easy_case)
+  filter_key: accuracy
+  filter_low: 0.9999
+  filter_high: 1.0001
+
 worker:
   actor:
     global_batch_size: 112  # equivalent to verl's actor.ppo_mini_batch_size
@@ -81,7 +86,7 @@ trainer:
   max_steps: null
   project_name: easy_r1
   experiment_name: qwen2_5_7b_math_grpo
-  logger: ["console"]
+  logger: ["console"] #wandb
   nnodes: 1
   n_gpus_per_node: 8
   max_try_make_batch: 20 # -1 means no limit
